# ctranslate2-demo

./: CMakeLists.txt  Makefile  README.md  main.cpp  sandman.txt
ctranslate2/: build.sh
ctranslate2/lib/: libctranslate2.3.22.0.dylib  libctranslate2.3.dylib  libctranslate2.dylib
ctranslate2/lib/cmake/ctranslate2/: ctranslate2ConfigVersion.cmake  ctranslate2Targets-release.cmake  ctranslate2Targets.cmake
